--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>dari abang maxim</title>
+    <title>DARI MAMANG OJOL</title>
 </head>
 <body>
     <div class="greetings">
-    <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
+    <!-- SPAN 1 <span>text...</span -->
         <span>H</span>
         <span>A</span>
         <span>L</span>
@@ -18,7 +18,7 @@
         <span>O</span>
     </div>
     <div class="description">
-        <span>UNTUK SI ALIS TEBAL IPS 2!!</span>
+        <span>FROM COODERS IPS 2 TO SOMEONE!!</span>
     </div>
     <div class="button">
         <button>
